--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app">
-      <canvas id="RenderCanvas" width=100 height=100></canvas>
-    </div>
+    <div id="app" />
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
