--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app" />
+    <canvas id="RenderCanvas" width="4" height="3"></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
