feat: add solid-js ui library

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Vite App</title>
   </head>
   <body>
+    <div id="root" />
     <div id="app" />
     <canvas id="RenderCanvas" width="4" height="3"></canvas>
+    <script type="module" src="/src/index.tsx"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
