Custom palette, nice lobby
TODO: Unify LobbyView for both Local and Network (just a few extra props and conditionals)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tinywars</title>
   </head>
-  <body>
+  <body> <!-- onmousedown="return false" onmouseup="return false" -->
     <div id="root" />
     <script type="module" src="/src/index.tsx"></script>
   </body>
