--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Tinywars</title>
   </head>
-  <body>
-    <div id="app" />
-    <canvas id="RenderCanvas" width="4" height="3"></canvas>
-    <script type="module" src="/src/main.ts"></script>
+  <body> <!-- onmousedown="return false" onmouseup="return false" -->
+    <div id="root" />
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
